Change saving to use multiple files
Supported in zipped cmpgn file or in save as directory